2006-02-21  Lars Clausen  <lars@raeder.dk>

	* NEWS: 
	* doc/pl/dia.xml: 
	* doc/en/dia.xml: 
	* configure.in: 
	* config.h.win32: Update to -pre2.

	* lib/beziershape.c (add_handles): Fixing CP pos calculation for
	adding new CP's.  Fixes bug #331557.

2006-02-20  Lars Clausen  <lars@raeder.dk>

	* lib/diarenderer.c (find_center_point): Better handling of some
	degenerate cases.
	(draw_arc_with_arrows): Draw line in all cases.  Doesn't handle
	the truly degenerate cases well enough yet, but at least doesn't
	break on common cases.  Probably need to do something special for
	arcs with start and end point the same.  Improves but does not
	entirely fix bug #331372.

2006-02-20  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/Makefile.am : dot.py was missing from EXTRA_DIST
	
2006-02-18  Hans Breuer  <hans@breuer.org>

	* plug-ins/metapost/render_metapost.c : text position gives the
	baseline neither top nor bottom. ( Rob McDonald, #331491 )

	* plug-ins/wmf/wmf.cpp : finally respecting the print margins
	( Rob McDonald, #331371 )
	* plug-ins/wmf/wmf_gdi.h : some more constants not useful 
	without a GDI printer (driver)
	
2006-02-17  Hans Breuer  <hans@breuer.org>

	* plug-ins/metapost/render_metapost.c(draw_string) : dont query
	the font for it's height but use the 'height' parameter passed
	in. Close enough to the desired size - and independent of zoom -
	to close bug #331489 (Rob McDonald)
	
2006-02-12  Lars Clausen  <lars@raeder.dk>

	* NEWS: 
	* dia.spec: 
	* doc/pl/dia.xml: 
	* doc/en/dia.xml: 
	* configure.in: 
	* config.h.win32: Updates for version 0.95-pre1.

2006-02-12  Hans Breuer  <hans@breuer.org>

	* app/makefile.msc : build three components dia.exe (console
	application), diaw.exe (windows application) and dia-app.dll
	containing almost all of Dia's application shared between
	the two executables
	* app/main.c app/winmain.c app/app_procs.c app/dia.def : some 
	refactoring to accomplish the new dependency layout